# GooseCrypto

./: API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GITHUBREADME.md  LICENSE  Makefile  README.md  SECURITY.md  build.sh  config.json  docker-compose.yml  genesis.json  goosecrypto_node  run.sh  run_tests.sh  simple-test
.github/workflows/: ci.yml
api/examples/: node-example.js  web-example.html
api/javascript/: jest.config.js  package-lock.json  package.json  test.js  tsconfig.json
api/javascript/src/: crypto-utils.ts  index.ts  ton-client.ts  types.ts
docs/: faq.md  getting-started.md  index.md  javascript-client.md
include/core/: block.h  blockchain.h  transaction.h  wallet.h
include/crypto/: keys.h  sha256.h
include/network/: api_server.h  p2p.h
include/utils/: config.h  logger.h
src/: main.cpp
src/core/: block.cpp  blockchain.cpp  transaction.cpp  wallet.cpp
src/crypto/: keys.cpp  sha256.cpp
src/network/: api_server.cpp  p2p.cpp
src/utils/: config.cpp  logger.cpp
tests/: block_test.cpp  blockchain_test.cpp  crypto_test.cpp  simple_test.cpp  wallet_test.cpp
